# 3DRenderer

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Application.cpp  Application.h  Brush.cpp  Brush.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Controller.cpp  Controller.h  Except.cpp  Except.h  Frame.cpp  Frame.h  Inttypes.h  Linalg.h  Mesh.h  Model.cpp  Model.h  ModelEvent.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Runtime.cpp  Runtime.h  RuntimeComponent.cpp  RuntimeComponent.h  Scene.cpp  Scene.h  Vertex.h  View.cpp  View.h  ViewEvent.h  main.cpp
src/Inttypes/: Inttypes.cpp  Inttypes.h
src/Linalg/: Interpolation.cpp  Interpolation.h  LinalgBase.cpp  LinalgBase.h  Perspective.cpp  Perspective.h
